--- a/templates/LSubmissionForm.html
+++ b/templates/LSubmissionForm.html
@@ -96,10 +96,10 @@
                   No file attached
                 {% else %}
                   <form method = "POST" action="/download">
-                    <button class="dbut" type="submit" name="downloadFile" value="downloadFile" onclick="{{url_for('download_files')}}"></button>{{filename}}
+                    <button class="dbut" type="submit" name="downloadFile" value="downloadFile" onclick="{{url_for('download_files')}}"></button><label class="cboxlab">&ensp;{{filename}}</label>
                   </form>
                 {% endif %}
-                
+                <label class="cbox cboxlab">&ensp;Request more Evidence</label><input type="checkbox" class="cbox">
               </div>
             <!-- <input type="text" id="lname" name="lastname" placeholder="" /> -->
           </div>
@@ -141,7 +141,7 @@
               </div>
               <div id="input">
                 <form>
-                  <input id="input" type="text" name="user" placeholder="Enter Your Message"/>
+                  <input id="input" type="text" name="user" placeholder="Enter Your Message"/><button class="ui addcom button">Add</button>
                 </form>
               </div>
             </div>
