--- a/static/css/CommentBoxStyle.css
+++ b/static/css/CommentBoxStyle.css
@@ -41,12 +41,13 @@
 }
 
 #input{
-	width: 100%;
+	width: 91.6%;
 	border-radius:0;
 	margin: 0;
 	padding-bottom: 10px;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
+	border-top-right-radius: 4px;
   	box-sizing: border-box;
 }
 
