--- a/templates/SApplicationSubView.html
+++ b/templates/SApplicationSubView.html
@@ -14,7 +14,8 @@
 
     <title>Application Form</title>
   </head>
-  <body class="outer">
+  <body>
+  <div class="outer">
     <form method="POST">
     <div class="Appcontainer">
       <h1 class="Appheading">Application</h1>
@@ -145,5 +146,6 @@
       </div>
     </div>
     </form>
+  </div>
   </body>
 </html>
