--- a/static/css/Application.css
+++ b/static/css/Application.css
@@ -17,11 +17,24 @@ textarea {
 }
 
 .outer{
-  background-image: url(https://images.unsplash.com/photo-1513530534585-c7b1394c6d51?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80);
+  background-image: url(https://ringdedektiflik.com/wp-content/uploads/2020/12/2-1.jpg);
   background-repeat: no-repeat;
-  backdrop-filter: blur(2px);
   background-size: cover;
-  background-position:inherit;
+  position:absolute;
+  width:100vw;
+}
+
+input[readonly],
+textarea[readonly]{
+  background-color:#e7e7e7;
+}
+
+input[type="text"]:focus{
+  outline: none;
+}
+
+textarea:focus{
+  outline: none;
 }
 
 
@@ -43,7 +56,7 @@ input[type="submit"] {
 /* Style the container */
 .Appcontainer {
   border-radius: 10px;
-  background-color: #f2f2f2;
+  background-color: #e9e9e9ed;
   height: 24.5cm;
   width: 16cm;
   margin: auto;
@@ -121,7 +134,7 @@ input[type="submit"] {
 .submitbut {
   position: relative;
   bottom: 20%;
-  left: 20%;
+  left: 23.9%;
   align-self: center;
   align-items: center;
   margin-top: 5.5cm;
