--- a/templates/NewSubmissionForm.html
+++ b/templates/NewSubmissionForm.html
@@ -25,16 +25,30 @@ textarea {
   resize: none; /* added later*/
 }
 
+input[readonly],
+textarea[readonly]{
+  background-color:#e7e7e7;
+}
+
+input[type="text"]:focus{
+  outline: none;
+}
+
+textarea:focus{
+  outline: none;
+}
+
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .outer{
-  background-image: url(https://images.unsplash.com/photo-1513530534585-c7b1394c6d51?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80);
+  background-image: url(https://ringdedektiflik.com/wp-content/uploads/2020/12/2-1.jpg);
   background-repeat: no-repeat;
-  background-size:cover;
-  backdrop-filter: blur(2px);
+  background-size: cover;
+  position:absolute;
+  width:100vw;
 }
 
 
@@ -55,8 +69,9 @@ input[type="submit"] {
 
 /* Style the container */
 .Appcontainer {
+  z-Index:2;
   border-radius: 10px;
-  background-color: #f2f2f2;
+  background-color: #e9e9e9ed;
   height: 20cm;
   width: 16cm;
   margin: auto;
@@ -119,7 +134,8 @@ input[type="submit"] {
 }
     </style>
   </head>
-  <body class="outer">
+  <body>
+    <div class="outer">
     <form method="POST" action="/upload" enctype="multipart/form-data">
       <div class="Appcontainer">
         <h1 class="Appheading">Application</h1>
@@ -234,5 +250,6 @@ input[type="submit"] {
         </div>
       </div>
     </form>
+    </div>
   </body>
 </html>
