--- a/static/css/SDashboardStyle.css
+++ b/static/css/SDashboardStyle.css
@@ -37,6 +37,16 @@ header {
   color: white;
 }
 
+.uicon{
+  position: relative;
+  float: left;
+  width: 0.75cm;
+  height: 0.75cm;
+  background-size: cover;
+  background-image: url(https://research.cbc.osu.edu/sokolov.8/wp-content/uploads/2017/12/profile-icon-png-898.png);
+  z-index: 999;
+}
+
 .settings {
   background-image: url("https://static.thenounproject.com/png/83396-200.png");
   background-size: contain;
